app/assets/stylesheets/onboarding.css.scss
@import "common";
@import 'normalize';
@import 'welcome';
@import "category";
@import "userprofile";
@import "pages";
@import "analytics";
@import "posts_projects";

@media (max-width: 980px) {
   .nav-title {
     display: inline-block !important;
   }
}

.pitch_ttl {
  margin-top: 1em;
}

#selectable_content {
  #response_to_text_0 {
    background-color: yellow;
  }
}

#dismiss-modal {
  background-color: white !important;
  color: #2a2a2a !important;
}

#comments_feed {
  h3 {
    margin: 1em 0;
  }
  .comments {
    .li-content {
      display: flex;
      span {
        margin-left: 10px;
      }
      a, span {
        font-size: 13px;
      }
      .date_ago {
        margin-left: 0;
      }
    }
    .li-link-wrapper {
      position: absolute;
      a {
        display: block !important;
        position: absolute;
      }
    }
    .li-link-wrapper, .li-link-wrapper a {
      width: 100%;
      height: 90%;
    }
  }
  .flex-drafts {
    margin: 0 auto 40px auto;
  }
}

#post_reviews_attributes_0_status {
  background-color: WhiteSmoke;
}

#main_navigation {
  .nav_wrapper {
    max-width: 1300px;
    margin: 0 auto;
    padding: 0 30px;
    .counter {
      height: 10px;
      width: 10px;
      font-size: 10px;
      padding: 2px;
      left: 14px;
      border-radius: 50%;
      border: 2px white solid;
    }
    .dropdown {
      height: 100%;
      .sec {
        width: 5px;
        height: 5px;
        border: none;
        margin: 0;
        padding: 1px 3px;
        font-size: 3px;
        left: 3px;
        top: -10px;
      }
      &:hover {
        cursor: pointer;
      }
    }
    .dropdown-toggle::after {
      display: none !important;
    }
    .dropdown-menu {
      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1), 0 2px 5px 0 rgba(0,0,0,0.12);
      border-radius: 21px;
      width: 240px;
      padding-left: 0;
      padding-right: 0;
      overflow: hidden;
      transform: translate3d(-140px, 48px, 0px) !important;
      .dropdown-item {
        font-weight: 400;
        padding: 15px !important;
        p {
          display: inline;
          position: absolute;
          right: 15px;
          margin: 0;
          font-size: 0.8em;
          color: gray;
        }
        &:hover {
          background-color: WhiteSmoke;
          box-shadow: none;
          color: black !important;
        }
      }
    }
    .btn-profile {
      width: 77px;
      height: 42px;
      border-radius: 21px;
      overflow: visible;
      margin: 6px 0 6px 20px;
      border: 1px solid #DDDDDD !important;
      box-shadow: none;
      &:hover {
        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.18), 0 2px 5px 0 rgba(0,0,0,0.15);
        transition: box-shadow 0.2s ease !important;
      }
      .fa {
        color: #212529 !important;
        margin-left: 4px;
      }
      img {
        border-radius: 50%;
        width: 30px;
        height: 30px;
        margin-top: -4px;
      }
      span {
        width: 50%;
        line-height: 42px;
      }
    }
  }
}

.carousel-multi-item {
  margin: 0;
  .controls-top {
    position: absolute;
    z-index: 0;
    top: 75px;
    width: 100%;
    .fa {
      margin: 0;
      color: #DDDDDD;
    }
    .left-control {
      float: left;
    }
    .right-control {
      float: right;
    }
  }
}

.dashboard-card-1 {
  background-color: #f8ceec;
  background-image: linear-gradient(315deg, #f8ceec 0%, #a88beb 74%);
}

.dashboard-card-2 {
  background-color: #5de6de;
  background-image: linear-gradient(315deg, #3eadcf 0%, #a88beb 74%);
}

.dashboard-card-3 {
  background-color: #abe9cd;
  background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%);
}

.dashboard-card {
  opacity: 1;
  transition: opacity 0.8s;
  -webkit-transition: opacity 0.8s;
  .value {
    font-family: Arial,Sans-serif;
    font-weight: lighter;
  }

  &:hover {
    opacity: 0.7;
  }
  a {
    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    transition:.5s;
  }
  a:hover {
    text-decoration: none;
    color: white;
  }
  .stats_wrapper {
    margin: 0 auto;
    width: fit-content;
    text-align: left;
    .value {
      font-size: 80px;
      color: white;
      display: inline;
      word-break: normal;
    }
    .text-wrapper {
      display: inline-flex;
      flex-direction: column;
      font-size: 22px;
      font-weight: lighter;
      top: -35px;
      margin-top: 15px;
      margin-left: 10px;
      position: relative;
      color: white;
      text-align: left;
    }
  }
}

.changes_requested {
  margin: 20px 10px 10px 10px;
  background-color: #ffeded;
  .fa-times {
    float: right;
  }
}

.review_frm {
  background-color: #FFFBDA;
  margin-bottom: 1.5em;
  h6 {
    font-family: 'Univers-CnUlt', "Arial", "Sans-serif";
  }
  b {
    color: #FF78CB;
  }
  hr {
    margin: 20px -20px;
  }
  input {
    margin: 0.5em 0;
  }
}

.changes_requested, .review_frm {
  .card-title, h6 {
    font-size: 18px;
    margin: 10px 0;
  }
  .card-text {
    font-size: 13px;
    font-style: italic;
    color: #757575;
  }
}

#edit_post {
  padding-top: 20px;
  #cke_1_contents {
    min-height: 600px !important;
  }
}

.pitches_wrapper, #comments_feed {
  h3 {
    margin-bottom: 10px;
  }
  .flex-wrapper {
    display: flex;
    flex-flow: row wrap; /* Shorthand – you could use ‘flex-direction: column’ and ‘flex-wrap: wrap’ instead */
    align-items: flex-start;
    .card-review {
      padding: 20px;
      p {
        margin: 5px 0;
      }
    }
    .card {
      margin-top: 1.2em;
      margin: 10px 0.5%;
      .card-text {
        font-size: 14px;
      }
      .card-bottom-flex {
        display: flex;
        position: relative;
        #review_img {
          padding: 10px;
        }
      }
    }
  }
}

.analytics {
  margin: 0 20px 20px 0;
  .card {
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
    border: 1px white solid;
  }
}

.thumbnail_img {
  max-width: 300px;
  width: 100%;
}

.thumbnail--container {
  .article_title {
    font-size: 20px;
  }
}

.delete_btn {
  display: block;
  float: right;
  margin-top: -60px;
  color: #FF78CB;
}

.edit_btn {
  padding: 3px 5px;
  border-radius: 2px;
  background-color: white;
  float: left;
  position: absolute;
}

.flex_container_mobile_reverse_order {
  .pitch_btn {
    color: #FF78CB;
    text-decoration: underline;
  }
}

.pitch_btn {
  color: #FF78CB;
}

.pitch_ttl {
  font-family: "Playfair Display";
}

.pitch_usr {
  font-size: 16px;
  margin-top: 0px;
  font-style: italic;
}

.pitch_form_wrapper {
  max-width: 800px;
  padding: 30px 40px;
  h2, h1, h3, h4, h5, h6 {
    font-family: "Playfair Display"
  }
  .pitch_flds {
    textarea {
      min-height: 150px;
    }
    input, select, label {
      display: block;
    }
    .margin_flds {
      margin: 25px 0;
    }
  }
}

.date_wrapper {
  bottom: 10px !important;
}

#edit--profile {
  .add_link input {
    margin-left: 0px !important;
  }
  .social input {
    padding-left: 30px;
  }
}

.welcome_hero {
  width: 100%;
}

.flex--p {
  max-width: 800px;
  margin: 0 auto;
}

.img_profile_example {
  max-width: 600px;
  width: 100%;
  display: block;
  margin: 0 auto;
}

.border {
  nav {
    .nav-title {
      flex-grow: 2;
    }
  }
}

.number_wrapper {
  height: 30px;
  margin-bottom: 8px;
  .img_number {
    height: 100%;
    padding: 2px 5px 2px 0px;
    display: inline-block;
    vertical-align: middle;
  }
}

.social {
  input {
    padding-left: 25px;
  }
}

.add_link {
  display: flex;
  flex-direction: row;
  input {
    margin: 10px 0px 10px 5px;
  }
  span {
    position: absolute;
    color: #b0b0b0;
    margin-top: 22px;
    margin-left: 15px;
  }
}

.add_margin_left {
  margin-left: 31px;
}

a {
  color: #65B19D;
}

a:hover {
  color: #65B19D;
}

.node {
  text-decoration: none !important;
}

.new--writer--wrapper {
  #page_title {
    text-align: left;
    padding: 30px 0;
  }
}

#onboarding_button {
  color: white;
  background-color: #2a2a2a;
  border: 1px solid #2a2a2a;
  width: 150px;
  text-align: center;
  text-decoration: none;
  float: right;
  line-height: 40px;
  margin: 20px 0;
  padding: 1px 7px 2px !important;
  cursor:pointer;
}

#edit_profile {
  color: black;
}


.hr {
  hr {
    width: 3em;
    display: block;
    height: 2px;
    border: 0;
    border-top: 2px solid #65B19D;
    margin: 2rem 0;
  }
}

.stair_step {
  text-align: center;
  .progress_step, .progress_step p {
    color: #65B19D !important;
    border-top-color: #65B19D !important;
  }
  span {
    display: inline-flex;
    flex-direction: column;
    margin: 0 4px;
    color: #DCDCDC;
    font-size: 25px;
    width: 75px;
    line-height: 25px;
    p {
      margin: 0;
      font-size: 14px;
      color: #3B464F;
      font-weight: bold;
    }
  }
  .hr {
    pointer-events: none;
    display: inline-block;
    position: absolute;
    line-height: 25px;
    left:0;
    right:0;
    margin-left:20px;
    margin-right:20px;
    hr {
      vertical-align: middle;
      display: inline-flex;
      border-top-color: #DCDCDC;
      font-size: 24px;
      margin: 0 5px;
    }
  }
}

.onboarding_page_container {
  margin: 30px auto;
  max-width: 800px;
  margin-bottom: 85px;
  #onboarding_page {
    padding: 30px;
    background-color: WhiteSmoke;
  }
}

.dashboard--articles--wrapper {
  p, ul, li {
    margin: 10px;
    font-size: 15px;
  }
  .tab {
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
    border: 1px solid #E5E5E5;
    margin: 2px 0 0 0;
    background-color: #f9f9f9;
    span {
      font-weight: 600;
      color: black;
    }
    img {
      width: 25px;
      margin-right: 5px;
      object-fit: contain;
    }
  }
  .drop--down {
    border: 1px solid #E5E5E5;
    border-top: none;
    display: flex;
    flex-direction: column;
    p {
      margin: 0;
      padding: 10px;
      font-size: 15px;
    }
    .flex--start {
      display: flex;
      justify-content: space-between;
      align-items: center;
      margin-bottom: 5px;
      p {
        font-weight: bold;
        color: #65B19D;
      }
    }
  }
}

.button_style {
  padding: 8px 30px;
  text-decoration: none;
  margin: 0px 10px;
  color: white;
  background-color: black;
}

@media(max-width: 900px) {
  .flex-wrapper, .flex-drafts {
    .card {
      width: 49% !important;
    }
  }
}

@media (max-width: 720px) {
  .flex-wrapper, .flex-drafts {
    flex-direction: column !important;
    .card {
      width: 100% !important;
    }
  }
  .pitch_form_wrapper {
    padding: 0;
  }
}

@media (max-width: 450px) {
  .nav_article .pt-4 {
    display: none;
  }
}

@media (max-width: 340px) {
  .nav_article .nav-title {
    font-size: 1.2rem !important;
  }
}

@media (max-width: 600px) {
  #banner {
    display: none !important;
  }
  .border {
    border-top: none !important;
  }
  .skinny_wrapper {
    width: 90%;
  }
  .pitches_wrapper {
    .btn_cntnr {
      margin-top: 20px;
    }
    .flex_container_mobile_reverse_order {
      display: flex;
      flex-direction: column-reverse;
      .btn_cntnr {
        margin-bottom: 20px !important;
        .newpost--new--profile {
          padding: 10px;
        }
      }
    }
  }
  .analytics .card {
    margin-bottom: 0px;
  }
  .analytics {
    margin-bottom: 10px;
  }
  .btn_cntnr {
    float: none;
    display: inline-block;
    margin: 20px 0;
    padding: 0;
  }
}

